<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RaggingForm"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ToolbarRagging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme= "@style/ThemeOverlay.AppCompat.Dark"
        android:background="@color/teal_200">

    </androidx.appcompat.widget.Toolbar>


<!--Student name-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/ragging_name_of_Student"
            android:textSize="20sp"
            android:backgroundTint="#FFFFFF"


            />
    </com.google.android.material.textfield.TextInputLayout>

<!--    college-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/ragging_School_College"
            android:textSize="20sp"
            android:backgroundTint="#FFFFFF"


            />
    </com.google.android.material.textfield.TextInputLayout>
<!--   gender-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/ragging_gender"
            android:textSize="20sp"
            android:backgroundTint="#FFFFFF"


            />
    </com.google.android.material.textfield.TextInputLayout>
<!--    roll no-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/ragging_roll_no"
            android:textSize="20sp"
            android:backgroundTint="#FFFFFF"


            />
    </com.google.android.material.textfield.TextInputLayout>

<!--    description-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRaggingDesc"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/description"
            android:textSize="20sp"
            android:backgroundTint="#FFFFFF"


            />
    </com.google.android.material.textfield.TextInputLayout>



<!--    add proff-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffff"
        android:text="@string/add_proof"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:textSize="20sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rag_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_camera"
            android:textAllCaps="false"
            android:backgroundTint="#95264C"
            android:layout_marginLeft="20dp"
            />
        <ImageView
            android:id="@+id/rag_cam_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="100dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_filePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#95264C"
            android:text="@string/open_gallery"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:id="@+id/txt_pathShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Location"
            android:textColorHint="#A3A3A3"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/rag_snd_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="120dp"
        android:backgroundTint="#95264C"
        android:textAllCaps="false"
        android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>