<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".FormScreen"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/desc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="60dp"
            android:text="@string/description"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/desc_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/bottom_sheet_behavior"
            android:hint="@string/tell_us_something_about_the_incident"
            android:inputType="text"
            android:textColorHint="#ACA8A8" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="20dp"
            android:text="@string/add_proof"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_cam"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/ic_camera_logo"
                android:contentDescription="@string/todo"
                android:visibility="visible" />
            <ImageView
                android:id="@+id/gallery_img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/ic_gallery_logo"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:text="@string/open_camera"
                android:backgroundTint="#95264C" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/open_gallery"
                android:backgroundTint="#95264C" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">


            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/send"
                android:backgroundTint="#95264C"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.203"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/Locationtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"
                android:textColor="#ffff"
                app:layout_constraintBottom_toTopOf="@+id/sendButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/done_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toEndOf="@+id/sendButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.936" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>