<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/DomesticVoilence"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/black_ops_one"
                android:gravity="center_horizontal"
                android:text="@string/domestic_voilence"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@drawable/domestic_volience_logo"


                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ChildAbuse"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/DomesticVoilence"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/black_ops_one"
                android:gravity="center_horizontal"
                android:text="@string/child_abuse"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@drawable/child_harrasment"


                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/AnimalHarrasment"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_below="@id/ChildAbuse"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/black_ops_one"
                android:gravity="center_horizontal"
                android:text="@string/animal_harassment"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@drawable/animal_harras"


                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Ragging"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_below="@id/ChildAbuse"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        android:layout_toRightOf="@id/AnimalHarrasment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/black_ops_one"
                android:gravity="center_horizontal"
                android:text="@string/ragging"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@drawable/ragging"


                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>